--- a/index.html
+++ b/index.html
@@ -587,13 +587,13 @@ You should have received a copy of the GNU General Public License along with thi
       }
     }
     return;
-    case 97: //i:a
+    case 112: //i:p[url]#[querystring] for http POST
     {
-      let iQ = url.indexOf('?',12);
+      let iQ = url.indexOf('#',12);
       let data;
       let rurl;
       switch(subcmd){
-      case 49: //i:a1
+      case 49: //i:p1
       {
         if(iQ>4) {
           rurl = url.substring(4,iQ);
@@ -606,7 +606,7 @@ You should have received a copy of the GNU General Public License along with thi
           data = [];
         }
       }
-      case 50: //i:a2[url]?[filePath] post request with local file
+      case 50: //i:p2[url]#[filePath] post request with local file
         rurl = url.substring(4,iQ);
         data = [{type: 'file', filePath:url.substring(iQ+1)}];
       }
