--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@ You should have received a copy of the GNU General Public License along with thi
     tabs.children[iTab].printToPDF(options)
       .then(u8array=>save(filePath,u8array));
   }
-  function bookmark(args){//b [filenamestem] url title :bookmark
+  function bookmark(argrest){//b [filenamestem] :bookmark
     let bmFileName = "bookmark.rec";
     let tab = tabs.children[iTab];
     let url = tab.getURL();
-    if(args.length>1)
-      bmFileName = args[1]+".rec";
+    if(argrest)
+      bmFileName = argrest+".rec";
     let title = tab.getTitle();
     let line = title + " " + url + "\n";
     fs.appendFile(path.join(__dirname,bmFileName), line, (err)=>{});
@@ -366,29 +366,39 @@ You should have received a copy of the GNU General Public License along with thi
     ipcRenderer.send("command",q);
   }
   function coloncommand_render(cmd){
+    const delimiter = /\s+/;
+    let arg0 = cmd;
+    let argrest = null;
+    const match = delimiter.exec(cmd);
+    if(match){
+      const sIndex = match.index;
+      const eIndex = startIndex + match[0].length - 1;
+      arg0 = cmd.substring(0,sIndex);
+      argrest = cmd.substring(eIndex);
+    }
     args = cmd.substring(1).split(/\s+/);
-    switch(args[0]){
+    switch(arg0){
     case "ac":
-      autoc(args);
+      autoc(argrest);
       return;
     case "b":
-      bookmark(args);
+      bookmark(argrest);
       return;
     case "bjs":
-      eval(cmd.slice(5));
+      eval(argrest);
       return;
     case "bml":
-      bml(args);
+      bangcommand(argrest,0);
       return;
     case "pdf":
-      savePdf(args);
+      savePdf(argrest);
       return;
     }
 
   }
-  function autoc(args){
-    if(2!=args.length) return;
-    let fpath = path.join(__dirname,args[1]);
+  function autoc(argrest){
+    if(!argrest) return;
+    let fpath = path.join(__dirname,argrest);
     let fname = fpath;
     let delimit = ' ';
     if (!fs.existsSync(fname)){
@@ -408,18 +418,24 @@ You should have received a copy of the GNU General Public License along with thi
       tabs.children[iTab].executeJavaScript(str,false);
     });
   }
-  function savePdf(args){
+  function savePdf(argrest){
     let filename = "ebrowser.pdf";
     let options = {};
-    if(1<args.length){
-      let c0 = args[1].charCodeAt(0);
-      let i = 1;
+    if(argrest){
+      let c0 = argrest.charCodeAt(0);
+      let iOpts = 0;
       if(123!=c0){//not '{' options then it is filename
-        filename = args[1] + ".pdf";
-        i = 2;
+        let iS = argrest.indexOf(' ');
+        let filestem = argrest;
+        if(iS>0) {
+          filestem = argrest.substring(0,iS);
+          iOpts = iS+1;
+        }else
+          iOpts = argrest.length;
+        filename = filestem + ".pdf";
       }
-      if(i==args.length-1){//:Pdf [filename] {...}
-        if(2==args[i].length){// '{}'
+      if(argrest.length>iOpts){//:Pdf [filename] {...}
+        if(iOpts+2==argrest.length){// '{}'
           let width = document.body.clientWidth/96;
           tabs.children[iTab].executeJavaScript("document.documentElement.scrollHeight",
           false).then((h)=>{
@@ -431,17 +447,17 @@ You should have received a copy of the GNU General Public License along with thi
           return;
         }else{
           try {
-            options = JSON.parse(args[i]);
+            options = JSON.parse(argrest.substring(iOpts));
           }catch(e){};
         }
       }
     }
     print2PDF(filename,options);
   }
-  function bangcommand(q){
-    let iS = q.indexOf(' ',1);
+  function bangcommand(q,offset){
+    let iS = q.indexOf(' ',offset);
     if(iS<0) iS=q.length;
-    let fname = q.substring(1,iS);
+    let fname = q.substring(offset,iS);
     let fpath = path.join(__dirname,fname+'.js');
     if (fs.existsSync(fpath)) {
       fs.readFile(fpath, 'utf8',(err, js)=>{
@@ -592,6 +608,7 @@ You should have received a copy of the GNU General Public License along with thi
       let iQ = url.indexOf('#',12);
       let data;
       let rurl;
+      let headers;
       switch(subcmd){
       case 49: //i:p1
       {
@@ -605,16 +622,18 @@ You should have received a copy of the GNU General Public License along with thi
           rurl = url.substring(4);
           data = [];
         }
+        headers = 'Content-Type: application/x-www-form-urlencoded';
         break;
       }
       case 50: //i:p2[url]#[filePath] post request with local file
         rurl = url.substring(4,iQ);
         data = [{type: 'file', filePath:url.substring(iQ+1)}];
+        headers = 'Content-Type: multipart/form-data';
         break;
       default:
         return;
       }
-      tabs.children[iTab].loadURL(rurl,{postData:data,extraHeaders:'Content-Type: application/x-www-form-urlencoded'});
+      tabs.children[iTab].loadURL(rurl,{postData:data,extraHeaders:headers});
       return;
     }
     case 113: //i:q for multiple queries
