bangcommand now evaluated at OS level

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ You should have received a copy of the GNU General Public License along with thi
       let c1=q.charCodeAt(1);
       switch(c0){
       case 33://"!"
-        bangcommand(q);
+        coloncommand(q);
         recQueryHistory(q);
         return;
       case 47://"/"
