--- a/index.html
+++ b/index.html
@@ -106,12 +106,9 @@ You should have received a copy of the GNU General Public License along with thi
 
   function initSearchEngines(jsonStr){
     try{
-      let val1st;
-      engines=JSON.parse(jsonStr, (key, value)=>{
-        if(!val1st && !(/^\d+$/u.test(key))) val1st=value;
-        return value;
-      });
-      if(val1st) defaultSE=val1st;
+      engines=JSON.parse(jsonStr);
+      let match = jsonStr.match(/:"([^"]+)"/);
+      if(match) defaultSE=match[1];
     }catch(e){}
   }
   function save(filePath, u8array){
@@ -372,7 +369,7 @@ You should have received a copy of the GNU General Public License along with thi
     const match = delimiter.exec(cmd);
     if(match){
       const sIndex = match.index;
-      const eIndex = startIndex + match[0].length - 1;
+      const eIndex = sIndex + match[0].length - 1;
       arg0 = cmd.substring(1,sIndex);
       argrest = cmd.substring(eIndex);
     }else
