--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@ You should have received a copy of the GNU General Public License along with thi
     tabs.children[iTab].printToPDF(options)
       .then(u8array=>save(filePath,u8array));
   }
+  function showHtml(html){
+    let js = "document.documentElement.innerHTML=`"+html+"`;";
+    tabs.children[iTab].executeJavaScript(js,false);
+  }
   function bookmark(argrest){//b [filenamestem] :bookmark
     let bmFileName = "bookmark.rec";
     let tab = tabs.children[iTab];
