--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ You should have received a copy of the GNU General Public License along with thi
   }
   function cbStartLoading(e){
     let tab = e.target;
+    if(bDarkTheme) tab.insertCSS(cssInvert);
     if(!bDomainCSS) return;
     let domain;
     try{
@@ -193,7 +194,6 @@ You should have received a copy of the GNU General Public License along with thi
   }
   function cbFinishLoad(e){
     let tab = e.target;
-    if(bDarkTheme) tab.insertCSS(cssInvert);
     let url = tab.getURL();
     if(bHistory){
       let histItem = tab.getTitle()+" "+url+"\n";
@@ -217,7 +217,7 @@ You should have received a copy of the GNU General Public License along with thi
   function initTab(tab){
     tab.allowpopups = true;
     tab.addEventListener('did-finish-load',cbFinishLoad);
-    tab.addEventListener('did-start-loading',cbStartLoading);
+    tab.addEventListener('dom-ready',cbStartLoading);
     tab.addEventListener('will-navigate',cbNavigate);
   }
   function newTab(){
