default to http

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ You should have received a copy of the GNU General Public License along with thi
           break;
         }
         if(q.indexOf('.')>0){
-          url = 'https://'+q;
+          url = 'http://'+q;
           break NOREC;
         }
         url = defaultSE.replace('%s',q);
